{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 10,
  "lineage": "5102675f-7475-2e88-a41a-595581c9f49f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:internet-gateway/igw-052f1c7d5f6d16393",
            "id": "igw-052f1c7d5f6d16393",
            "owner_id": "251465816834",
            "tags": {
              "Name": "prod-aws-igw"
            },
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:route-table/rtb-073960f0a8791dc60",
            "id": "rtb-073960f0a8791dc60",
            "owner_id": "251465816834",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052f1c7d5f6d16393",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_Main_table-testing"
            },
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c68c8042a8952d",
            "route_table_id": "rtb-073960f0a8791dc60",
            "subnet_id": "subnet-0d8bfd2854ee76dc0"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:security-group/sg-04d65f37b1dce3307",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d65f37b1dce3307",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "251465816834",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-0d8bfd2854ee76dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.9.1.0/24",
            "id": "subnet-0d8bfd2854ee76dc0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "prod_Public_Subnet1-testing"
            },
            "tags_all": {
              "Name": "prod_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-0bbd0718174f0f9d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.9.2.0/24",
            "id": "subnet-0bbd0718174f0f9d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "prod_Public_Subnet2-testing"
            },
            "tags_all": {
              "Name": "prod_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:subnet/subnet-0d23692e41eb7515c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.9.3.0/24",
            "id": "subnet-0d23692e41eb7515c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251465816834",
            "tags": {
              "Name": "prod_Public_Subnet3-testing"
            },
            "tags_all": {
              "Name": "prod_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-0169c221a2a49489f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251465816834:vpc/vpc-0169c221a2a49489f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.9.0.0/16",
            "default_network_acl_id": "acl-0fc455f680657daa0",
            "default_route_table_id": "rtb-00b100ebb6a90f434",
            "default_security_group_id": "sg-000eaf075c355b02b",
            "dhcp_options_id": "dopt-0514b037410579994",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0169c221a2a49489f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b100ebb6a90f434",
            "owner_id": "251465816834",
            "tags": {
              "Name": "prod-aws-testing",
              "Owner": "bnagella",
              "environment": "prod"
            },
            "tags_all": {
              "Name": "prod-aws-testing",
              "Owner": "bnagella",
              "environment": "prod"
            }
          }
        }
      ]
    }
  ]
}